--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -93,7 +93,7 @@
 \affiliation{Univ Lyon, Ecole Centrale de Lyon, Univ Claude Bernard, CNRS, Laboratoire de M\'ecanique des Fluides et d'Acoustique, F-69134 Ecully cedex, France}
 \maketitle
 \section{Introduction}
-
+The purpose of this paper is twofold.
 \section{Description of the test case for extreme drag fluctuations sampling}
 \label{sec:test_flow}
 
@@ -418,22 +418,75 @@ As an application, we use the \ac{gktl} algorithm to compute return times of ver
 
 \subsection{Extreme instantaneous drag forces with the \acl{ams} algorithm}
 \label{sec:ams}
-The \acl{ams}~\cite{amspaper} inherits from the base ideas of \textit{splitting} algorithms~\cite{kahnharris}: the sampling of a rare event can be made easier by splitting the event
-into a sequence of events that can be sampled with a higher probabilbity.
+% Introduction to AMS
+The \acl{ams}~\cite{amspaper} inherits from the base ideas of \textit{splitting} algorithms~\cite{kahnharris}: the sampling of a rare event is made easier by splitting the event into a sequence of events that can be sampled with a higher probabilbity.
 Even though a large body of variants have been proposed since the early 50s, the \ac{ams} appears as the most advanced formulation of multilevel splitting to date.
-In recent years, it was applied to several problems
+In recent years, it was applied to several problems, ranging from the computation of the dissociation time of biomolecules~\cite{teo2016} to the simulation of rare relaminarisations in a stochastic model of wall turbulence~\cite{rolland2017}.
 
+% Quick description of TAMS
 In the present paper we use a variant of the \ac{ams} algorithm called the \ac{tams}.
+The \ac{ams}, and therefore the \ac{tams}, relies on the definition of a \textit{score function} $\xi (\mathbf{x}(t))$.
+It is an observable of the dynamics that acts as a measure of the distance of the current state $\mathbf{x}(t)$ to the region of the state space that correspond to the rare event(s) of interest.
+The \ac{ams} algorithm is an iterative procedure, that starts from an ensemble of $N$ independant trajectories of the dynamics over a time-interval $[0;T_a]$.
+At each iteration, trajectories with the lowest maxima of the score function over $[0;T_a]$ are discarded and replaced by trajectories that achieved a higher value of the score function at some point of their
+history,
 The algorithm is sketched in figure~\ref{figure_AMS}.
 For further details about the algorithm and assoiated mathematical results, see~\cite{lestang2018} and references therein.
-In the remainder of this section, we illustrate that the application of the \ac{TAMS}, fails to easily and efficiently sample rare drag fluctuations occuring in the test flow described in section~\ref{sec:test_flow}.
-We analyse those difficulties in light of the conclusions of sections~\ref{sec:instantaneous_drag} and~\ref{sec:time_avg} on the dynamics of extreme drags.
 
-To begin with, figure~\ref{fig:comparaison_temps_retour} illustrate expected results from the \ac{tams}, based on a one-dimensional \ac{ou} process.
-In this case, it is clear that the algorithm allows for the sampling of very rare fluctuations for a computational cost that is many order of magnitude lower than their return time.
+% Example: OU process
+We first describe the result of the \ac{tams} on a simple case.
+We consider a one-dimensional \ac{ou} process
+\begin{equation}
+  \label{eq:ou}
+  \dot{x} = -x + \sqrt{2\epsilon}\eta (t)  
+\end{equation}
 
-We then apply the \ac{tams} to the test flow, to sample extreme drag fluctuations on the square obstacle. 
+and apply the \ac{tams} to simulate trajectories $\{\mathbf{x}(t)\}_{0\leq t \leq T_a}$ with $\underset{0\leq t \leq T_a}{\max} x(t) \geq a$ with $a$ very large with respect to typical fluctuations of $x(t)$.
+Figure~\ref{fig:compraison_temps_de_retour} illustrate the amplitude of the maximum over trajectories along the iterations of the algorithm.
+The computational cost of the algorithm after iteration $j$ is the computational cost of simulating the $N$ initial trajectories, as well as the resampling of the $j$ trajectories.
+Figure~\ref{fig:compraison_temps_de_retour} illustrates that the \ac{tams} samples extreme fluctuations $x \geq a$ for a computational cost several order of magnitude lower than the return time of such fluctuations.
+Undoubtedly, an \ac{ou} process is an oversimplified dynamics to showcase the efficiency of the \ac{ams} and \ac{tams}.
+Indeed, the state space is one-dimensional and the choice of the score function poses no questions: it is simply the observable $x$ itself.
+In addition, the noise term in~\eqref{eq:ou} has no correlations in time, which means that newly generated trajectories will quickly separate from their ancesotrs.
 
+% Application to turbulent flow past an obstacle
+Can we obtain similar results by applying the \ac{tams} to the test flow described in\ref{sec:test_flow} ?n
+The objective is to sample trajectories that display extreme fluctuatons of the drag $f_d$ acting on the square obstacle. However, by contrast with a simple \ac{ou} process, the phase space in higly-dimensinal and the choice of the score function $xi (\mathbf{x}(t))$ is not so clear.
+In the following we use the \ac{tams} with $\xi \equiv f_d$, which is the most simple choice for the score function.
+For such complex dynamics however, there is no resons for the drag itself to be a good measure of how far is a given state in phase space to regions where the drag is extreme.
+Unfortunately, the choice of better score functions rely on a deep understanding of the physics of the rare events of interest, whcih is precisely what we are tryping to achieve.
+
+% Commentaire figure instant_256_20
+
+Figure~\ref{fig:instant_256_20} displays similar information as figure~\ref{fig:comparaison_temps_de_retour} for $N=256$ initial trajectories over $T_a = 20 \tau_c$.
+Additionally, figure~\ref{fig:instant_256_20} shows the distribuion of the maximum of the drag among the initial trajectories.
+Over the first iterations of the algorithm, trajectories with the lowest maximum of the score function are discarded, and new trajectories with higher maximum are resampled.
+These maxima are depicted by the stars in figure~\ref{fig:instant_256_20}.
+However, the maximum over the resampled trajectories never exceeds the amplitude of the highest maximum in the initial set of trajectories.
+
+% Commentaire de la figure iter_181
+
+Figure~\ref{fig:instant_256_20} can be better understood by visualizing the set of the last resampled trajectories. 
+One can see that, ultimately, trajectories have been resampled from the same initial trajectory.
+We explain this phenonemon as follows.
+Because the flow dynamics hae a memory, it takes a certain time before a resampled trajectory separate from its parent.
+This is clearly visible on figure~\ref{fig:instant_256_20}.
+In our case, this memory originates from the deterministic nature of the dynamics, which implies that two trajectories starting from infinitesimally close starting point will overlap over a timescale called
+the <<Lyapunov timesacle>>~\cite{lyapunovRef}.
+However, we observe that the duration of extreme drag fluctuations is typically 5 times smaller that the Lyapunov timescale of the drag proces.
+This means that the resampling of a trajectory based on the value of the drag at $t^{\star}$ cannot lead to larger drag values for $t^{\star} \leq t \leq \tau_L$.
+For $t > \tau_L$, the drag process has no memory of the drag fluctuations on which the resampling was based and the probability of observing an extreme fluctuation over $\tau_l \leq t \leq T_a$ is very low.
+The difference between the typical duration of drag fluctuations $\tau_c$ and the Lyapunov timescale $\tau_0$ is linked to the convective nature of the flow.
+Indeed, fluid structures responsible for a particular value of the drag on the obstacle at a time $t^{\star}$ are swept away by the mean flow over a timescale $\tau_c$.
+
+% perspectives
+
+\begin{itemize}
+\item more trajectories
+\item different score functino?
+\item Change algorithm
+\end{itemize}
+\begin{figure}
   \centering
   \includegraphics[width=.7\linewidth]{ams/figure_AMS}
   \caption{Illustration of one selection-mutation step in the \ac{ams} algorithm for the computation of the probability that an observable $A:\mathbb{R}^d\to \mathbb{R}$  reaches values larger than $Q$ over a trajectory of duration $T_a$.}
